--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6", // Использование ES6 вместо ES5
+    "target": "es6",
     "module": "commonjs",
     "strict": true,
     "moduleResolution": "node",
